add a log to log4j2 & add sanshan-config