@@ -58,20 +58,20 @@
  - 使用Redis作为缓存 mysql作为通用数据库
  - maven作为项目管理工具
  - 基本架构是SSM 不过因为因为Spring4的注解解决方案很成熟 所以基本除了maven的pom.xml之外的xml基本消失了
- > (已经改为Spring Boot) 但是传统的Spring FrameWork方式同样支持 只需调整servlet入口类即可 在Application.java中有说明
+ 
  - 采用ElasticSearch 作为搜索支持
  - 日志系统采用的是Log4j2+slf4j 存储在mongoDB中
  - REST API 风格的URL 以及事务的完整支持
- - 对实时性不高的任务进行定时处理-目前采用阻塞队列进行添加 
- > 如果后期部署在多台机器上 将会换成MQ或者kafka这种中间件做通信
 
 
 3. 目前使用的是JWT+Spring security的安全方案
 4. 使用Spring Cloud 微服务框架支持
-5. 对Tomcat进行了GC参数调整 目前参数为下：
-> JAVA_OPTS="-server -Xms700m -Xmx700m -XX:PermSize=64M  -XX:NewRatio=4 -XX:MaxPermSize=128m -Djava.awt.headless=true "
-
-6. 整体项目使用[Docker][3]部署
+ - ZUUI 网关 
+ - eureka 服务注册 
+ - hystrix 服务保护 
+ - feign 服务消费
+ - rabbitmq 消息总线
+5. 整体项目使用[Docker][3]部署
 
 ##  领域模型设计 
 主要为 DO DTO VO 三种实体对象
